--- a/page/templates/introduce.html
+++ b/page/templates/introduce.html
@@ -25,9 +25,10 @@
                         <li><a href="https://www.instagram.com/likelion_mju/" target="_blank" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
                         <li><a href="https://github.com/likelionmju" target="_blank" class="icon style2 fa-github"><span class="label">Github</span></a></li>
                     </ul>
+                    <hr>
                 </header>
                 
-                <hr>
+ 
 
             <!-- Main -->
                 <section id="main">
@@ -45,7 +46,9 @@
                                 <a href="{% static 'page/images/thumbs/노혜인.jpg' %}">
                                     <img src="{% static 'page/images/thumbs/노혜인.jpg' %}" alt="" />
                                     <h3>노혜인 (YES혜인)</h3>
-                                    <p>경영정보학과 18</p>
+                                    <p>경영정보학과 18 <br>
+                                        (RPA 복수전공)
+                                    </p>
                                     <h5>모두가 "NO" 라고 말할 때, <br>
                                         "YES" 외칠 줄 아는 사람.
                                     </h5>
@@ -54,15 +57,15 @@
                             <div>
                                 <a href="{% static 'page/images/thumbs/김나연.jpg' %}">
                                     <img src="{% static 'page/images/thumbs/김나연.jpg' %}" alt="" />
-                                    <h3>김나연</h3>
+                                    <h3>김나연 (코여딩신)</h3>
                                     <p>응용소프트웨어 17</p>
                                     <h5>노는 게 제일 좋아 !</h5>
                                 </a>
-                                <a href="https://github.com/Yunsik-Choi">
-                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
-                                    <h3>최윤식</h3>
+                                <a href="{% static 'page/images/thumbs/최윤식.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/최윤식.jpg' %}" alt="" />
+                                    <h3>최윤식 (또치)</h3>
                                     <p>응용소프트웨어 16</p>
-                                    <h5>윤식</h5>
+                                    <h5>안녕하세요. 명지대 이종석입니다.</h5>
                                 </a>
                             </div>
                             <div>
@@ -79,12 +82,12 @@
                                     <p>경영학과 15 <br>
                                         (RPA 복수전공)
                                     </p>
-                                    <h5>9년차 고양이 집사 ing</h5>
+                                    <h5>고양이처럼 사는 게 목표</h5>
                                 </a>
                             </div>
                             <div>
-                                <a href="https://github.com/1KimJiHyeon">
-                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                <a href="{% static 'page/images/thumbs/김지현.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/김지현.jpg' %}" alt="" />
                                     <h3>김지현 (집순이)</h3>
                                     <p>데이터테크놀로지 18</p>
                                     <h5>집에 갈래.....🙂</h5>
