--- a/account/templates/activation_email.html
+++ b/account/templates/activation_email.html
@@ -1,3 +1,7 @@
 {{user.name}}님, 안녕하십니까.
-아래 링크를 클릭하여 계정을 활성화해주세요:
+멋쟁이사자처럼X명지대학교에 관심을 가져주셔서 감사합니다.
+
+아래 링크를 클릭하여 계정을 활성화해주십시오.
 http://{{domain}}{% url 'activate' uid token %}
+
+멋쟁이사자처럼X명지대학교 드림.
