fixed background image and detail images in "main.html"

--- a/page/templates/home.html
+++ b/page/templates/home.html
@@ -41,7 +41,7 @@
 							<header class="major">
 								<h2>ABOUT US</h2>
 							</header>
-							<p> <a href="https://likelion.net/" target="_blank" > 멋쟁이사자처럼</a>은 컴퓨터 비전공자들도 프로그래밍을 할 수 있도록 교육하는 전국 대학 연합 교육 단체입니다. "내 아이디어를 내 손으로 직접 실현한다."는 목표를 갖고 온/오프라인 강의을 통한 체계적인 프로그래밍을 교육을 진행합니다. 열정과 아이디어만 있다면 누구나 참여 가능한 <u>멋쟁이사자처럼</u>에서 당신의 꿈을 이루어 보세요.  </p>
+							<p> <a href="https://likelion.net/" target="_blank" > 멋쟁이사자처럼</a>은 컴퓨터 비전공자들도 프로그래밍을 할 수 있도록 교육하는 전국 대학 연합 동아리입니다. "내 아이디어를 내 손으로 직접 실현한다."는 목표를 갖고 온/오프라인 강의을 통한 체계적인 프로그래밍을 교육을 진행합니다. 열정과 아이디어만 있다면 누구나 참여 가능한 <u>멋쟁이사자처럼</u>에서 당신의 꿈을 이루어 보세요.  </p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="{% static 'page/images/likelion.png' %}" alt="" /></span>
@@ -57,11 +57,17 @@
 						<div class="col-6 col-12-medium">
 							<ul class="major-icons">
 								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
+								<li><span class="icon solid style2 major fa-code"></span></li>
 								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
 								<li><span class="icon solid style4 major fa-cog"></span></li>
 								<li><span class="icon solid style5 major fa-desktop"></span></li>
 								<li><span class="icon solid style6 major fa-calendar"></span></li>
+								<li><i class="fab fa-python"></i></li>
+								<li><i class="fab fa-js"></i></li>
+								<li><i class="fab fa-html5"></i></li>
+								<li><i class="fab fa-git-alt"></i></li>
+								<li><i class="fab fa-aws"></i></li>
+								<li><i class="fa fa-book"></i></li>
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium">
@@ -103,7 +109,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="{% static 'page/images/qna.jpg' %}" alt="" /></span>
 							<h3>Q&A</h3>
-							<p>궁금한 점이 있나요?</p>
+							<p>궁금한 점이 있나요? 편하게 물어보세요!</p>
 							<ul class="actions special">
 								<li><a href="{% url 'QnA' %}" class="button">More</a></li>
 							</ul>
