--- a/page/static/page/css/home.css
+++ b/page/static/page/css/home.css
@@ -2826,7 +2826,7 @@ input, select, textarea {
 			background-color: #333;
 			color: rgba(255, 255, 255, 0.75);
 			background-attachment: fixed,							fixed;
-			background-image: url("images/overlay1.png"), url("../images/main/header.jpg");
+			background-image: url("images/overlay1.png"), url("../images/main/curriculum.JPG");
 			background-size: auto,							cover;
 		}
 
@@ -2915,11 +2915,11 @@ input, select, textarea {
 	#header {
 		padding: 9em 0 9em 0 ;
 		/* background-color: #4686a0; */
-		/* color: rgba(255, 255, 255, 0.75); */
-		background-attachment: fixed,							fixed,							fixed;
-		/* background-image: url("images/overlay2.png"), url("images/overlay3.svg"), linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #4361c2); */
-		background-position: top left,						center center,					center center;
-		background-size: auto,							cover,							cover;
+		color: rgba(255, 255, 255, 0.75);
+		background-attachment: fixed;
+		background-image: url("images/lion.jpg");
+		background-position: top left;
+		background-size: auto;
 		overflow: hidden;
 		position: relative;
 		text-align: center;
@@ -3076,7 +3076,7 @@ input, select, textarea {
 			-webkit-transition: opacity 1s ease;
 			-ms-transition: opacity 1s ease;
 			transition: opacity 1s ease;
-			background-image: linear-gradient(45deg, #4fa49a, #4361c2);
+			/* background-image: linear-gradient(45deg, #4fa49a, #4361c2); */
 			content: '';
 			height: 100%;
 			left: 0;
@@ -3110,12 +3110,12 @@ input, select, textarea {
 
 	#footer {
 		padding: 6em 0 6em 0 ;
-		background-color: #4686a0;
+		/* background-color: #4686a0; */
 		color: rgba(255, 255, 255, 0.75);
-		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #4361c2, #4fa49a 50%, #9dc66b 95%);
-		background-position: top left,						center center,					center center;
-		background-size: auto,							cover,							cover;
+		background-attachment: fixed;
+		background-image: url("images/lion.jpg");
+		background-position: top left;
+		background-size: auto;
 		text-align: center;
 	}
 
