update email db

--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -25,7 +25,7 @@
         <input type="email" name="email" class="user" placeholder="E-mail Address"/>
         <span class="entypo-key inputPassIcon"><i class="fa fa-key"></i></span>
         <input type="password" name="password" class="password" placeholder="Password"/>
-        <div style="height: 10px"></div>
+{#        <div style="height: 10px"></div>#}
         <input type="submit" value="Login" name="login"/>
         <a href="{% url 'register' %}" style="text-decoration: none;"><input type="button" value="Join" name="join" ></a>
     </form>
