--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -84,7 +84,7 @@
                         <option value="8">8</option>
                     </select>
                     <div class="email">
-                        이메일 : <input type="text" name="email" class="email data"/> @ likelion.org
+                        아이디 : <input type="text" name="email" class="email data" style="text-align: center;"/> @ likelion.org
                     </div>
                 </div>
                 <div class="down">
