added pictures in "introduce.html"

--- a/page/templates/home.html
+++ b/page/templates/home.html
@@ -67,7 +67,7 @@
 								<li><i class="fab fa-html5"></i></li>
 								<li><i class="fab fa-git-alt"></i></li>
 								<li><i class="fab fa-aws"></i></li>
-								<li><i class="fa fa-book"></i></li>
+								<li><i class="fab fa-book"></i></li>
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium">
@@ -86,9 +86,9 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>페이지 소개</h2>
+						<h2>페이지 둘러보기</h2>
 					</header>
-					<p>멋쟁이사자처럼에서 당신의 꿈을 실현하세요.</p>
+					<p>멋쟁이사자처럼은 무한한 가능성의 꿈을 믿습니다.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="{% static 'page/images/members.jpg' %}" alt="" /></span>
@@ -109,7 +109,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="{% static 'page/images/qna.jpg' %}" alt="" /></span>
 							<h3>Q&A</h3>
-							<p>궁금한 점이 있나요? 편하게 물어보세요!</p>
+							<p>궁금한 점이 있나요? 같이 해결해보아요!</p>
 							<ul class="actions special">
 								<li><a href="{% url 'QnA' %}" class="button">More</a></li>
 							</ul>
@@ -137,6 +137,7 @@
 					<li><a href="https://www.facebook.com/likelionMJU" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/likelion_mju/" target="_blank"  class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://github.com/likelionmju" target="_blank"  class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.youtube.com/channel/UCoYWng52Y7_Mit4K7USB-cg" target="_blank"  class="icon brands alt fa-youtube"><span class="label">GitHub</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; MJU X LIKELION 8th </li><li> All rights reserved. </li>
