--- a/page/templates/introduce.html
+++ b/page/templates/introduce.html
@@ -24,6 +24,7 @@
                         <li><a href="https://www.facebook.com/likelionMJU" target="_blank" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
                         <li><a href="https://www.instagram.com/likelion_mju/" target="_blank" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
                         <li><a href="https://github.com/likelionmju" target="_blank" class="icon style2 fa-github"><span class="label">Github</span></a></li>
+                        <li><a href="https://www.youtube.com/channel/UCoYWng52Y7_Mit4K7USB-cg" target="_blank" class="icon style2 fa-youtube"><span class="label">Github</span></a></li>
                     </ul>
                     <hr>
                 </header>
@@ -50,14 +51,14 @@
                                         (RPA 복수전공)
                                     </p>
                                     <h5>모두가 "NO" 라고 말할 때, <br>
-                                        "YES" 외칠 줄 아는 사람.
+                                        "YES"를 외칠 줄 아는 사람.
                                     </h5>
                                 </a>
                             </div>
                             <div>
                                 <a href="{% static 'page/images/thumbs/김나연.jpg' %}">
                                     <img src="{% static 'page/images/thumbs/김나연.jpg' %}" alt="" />
-                                    <h3>김나연 (코여딩신)</h3>
+                                    <h3>김나연 (클로이KKK)</h3>
                                     <p>응용소프트웨어 17</p>
                                     <h5>노는 게 제일 좋아 !</h5>
                                 </a>
@@ -122,55 +123,56 @@
                                 </a>
                             </div>
                             <div>
-                                <a href="https://github.com/jinahkwak">
-                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
-                                    <h3>곽진아</h3>
+                                <a href="{% static 'page/images/thumbs/곽진아.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/곽진아.jpg' %}" alt="" />
+                                    <h3>곽진아 (찐아)</h3>
                                     <p>정보통신공학과 16</p>
-                                    <h5>진아</h5>
+                                    <h5>긍정적이고 재미있게 살기😃</h5>
                                 </a>
-                                <a href="https://github.com/wille318">
-                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
-                                    <h3>김예빈</h3>
+                                <a href="{% static 'page/images/thumbs/김예빈.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/김예빈.jpg' %}" alt="" />
+                                    <h3>김예빈 (열정 만수르)</h3>
                                     <p>미술사학과 19<br>
                                         (경영정보 복수전공)
                                     </p>
-                                    <h5>예빈</h5>
+                                    <h5>인간에게 가장 해로운 벌레는 대충</h5>
                                 </a>
                                 <a href="https://github.com/s0y00n">
                                     <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
-                                    <h3>이소윤</h3>
+                                    <h3>이소윤 (소따뚜이)</h3>
                                     <p>경영학과 18 <br>
                                         (경영정보 복수전공)
                                     </p>
-                                    <h5>소윤</h5>
+                                    <h5>집에 가고 싶다... 아니야, 정신차려</h5>
                                 </a>
                             </div>
                             <div>
-                                <a href="https://github.com/DoyKim-20">
-                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                <a href="{% static 'page/images/thumbs/김도영.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/김도영.jpg' %}" alt="" />
                                     <h3>김도영</h3>
                                     <p>응용소프트웨어 19</p>
-                                    <h5>도영</h5>
+                                    <h5>다음 생에는 돌로 태어나 <br>
+                                    아무것도 안 하고 싶다. </h5>
                                 </a>
-                                <a href="https://github.com/hyunbin1">
-                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
-                                    <h3>김현빈</h3>
+                                <a href="{% static 'page/images/thumbs/김현빈.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/김현빈.jpg' %}" alt="" />
+                                    <h3>김현빈 (포비)</h3>
                                     <p>미술사학과 20</p>
-                                    <h5>현빈</h5>
+                                    <h5>☆코딩 병아리☆</h5>
                                 </a>
-                                <a href="https://github.com/Ariel1016">
-                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
-                                    <h3>정가현</h3>
-                                    <p>숭실대 전자정보학부 18</p>
-                                    <h5>가현</h5>
+                                <a href="{% static 'page/images/thumbs/정가현.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/정가현.jpg' %}" alt="" />
+                                    <h3>정가현 (디즈니덕후)</h3>
+                                    <p>숭실대 전자정보공학부 18</p>
+                                    <h5>하고 싶은 건 다 하고 살거야 👸</h5>
                                 </a>
                             </div>
                             <div>
-                                <a href="https://github.com/seunghyun2269">
-                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
-                                    <h3>김승현</h3>
-                                    <p>데이터테크놀로지 16</p>
-                                    <h5>승현</h5>
+                                <a href="{% static 'page/images/thumbs/김승현.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/김승현.jpg' %}" alt="" />
+                                    <h3>김승현 (에디)</h3>
+                                    <p>데이터테크놀로지 17</p>
+                                    <h5>장고는 처음이라서... 😶</h5>
                                 </a>
                                 <a href="https://github.com/ygnaiih1680">
                                     <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
