completed adding member\"s  photos and intro in "introduce.html"

--- a/page/templates/introduce.html
+++ b/page/templates/introduce.html
@@ -103,23 +103,23 @@
                         <section class="thumbnails">
   
                             <div>
-                                <a href="https://github.com/mina-gwak">
-                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
-                                    <h3>곽민아</h3>
+                                <a href="{% static 'page/images/thumbs/곽민아.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/곽민아.jpg' %}" alt="" />
+                                    <h3>곽민아 (미나리)</h3>
                                     <p>경영정보학과 18</p>
-                                    <h5>민아</h5>
+                                    <h5>귀여운 게 최고야!</h5>
                                 </a>
-                                <a href="https://github.com/kimyubi">
-                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
-                                    <h3>김유비</h3>
+                                <a href="{% static 'page/images/thumbs/김유비.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/김유비.jpg' %}" alt="" />
+                                    <h3>김유비 (유빕)</h3>
                                     <p>응용소프트웨어 20</p>
-                                    <h5>유비</h5>
+                                    <h5>안녕하세요! 김유비입니다.</h5>
                                 </a>
-                                <a href="https://github.com/umyiebin">
-                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
-                                    <h3>엄예빈</h3>
+                                <a href="{% static 'page/images/thumbs/엄예빈.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/엄예빈.jpg' %}" alt="" />
+                                    <h3>엄예빈 (까만콩)</h3>
                                     <p>경영학과 18</p>
-                                    <h5>예빈</h5>
+                                    <h5>놀고 먹는 게 최고야!</h5>
                                 </a>
                             </div>
                             <div>
@@ -137,8 +137,8 @@
                                     </p>
                                     <h5>인간에게 가장 해로운 벌레는 대충</h5>
                                 </a>
-                                <a href="https://github.com/s0y00n">
-                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                <a href="{% static 'page/images/thumbs/이소윤.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/이소윤.jpg' %}" alt="" />
                                     <h3>이소윤 (소따뚜이)</h3>
                                     <p>경영학과 18 <br>
                                         (경영정보 복수전공)
@@ -149,7 +149,7 @@
                             <div>
                                 <a href="{% static 'page/images/thumbs/김도영.jpg' %}">
                                     <img src="{% static 'page/images/thumbs/김도영.jpg' %}" alt="" />
-                                    <h3>김도영</h3>
+                                    <h3>김도영 (도여미)</h3>
                                     <p>응용소프트웨어 19</p>
                                     <h5>다음 생에는 돌로 태어나 <br>
                                     아무것도 안 하고 싶다. </h5>
@@ -174,17 +174,17 @@
                                     <p>데이터테크놀로지 17</p>
                                     <h5>장고는 처음이라서... 😶</h5>
                                 </a>
-                                <a href="https://github.com/ygnaiih1680">
-                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
-                                    <h3>박성제</h3>
+                                <a href="{% static 'page/images/thumbs/박성제.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/박성제.jpg' %}" alt="" />
+                                    <h3>박성제 (AiRini)</h3>
                                     <p>응용소프트웨어 18</p>
-                                    <h5>성제</h5>
+                                    <h5>현금술사</h5>
                                 </a>
-                                <a href="https://github.com/HWANHEE-CHO">
-                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
-                                    <h3>조환희</h3>
+                                <a href="{% static 'page/images/thumbs/조환희.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/조환희.jpg' %}" alt="" />
+                                    <h3>조환희 (조퍼니)</h3>
                                     <p>사회과학부 20</p>
-                                    <h5>환희</h5>
+                                    <h5>누가 뭐라해도 나는 조퍼니. </h5>
                                 </a>
                             </div>
                         </section>
