--- a/page/templates/parallax.html
+++ b/page/templates/parallax.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     {% block title %}Likelion Camp{% endblock %}
     {% block link %}{% static 'page/css/home.css' %}{% endblock %}
-    <noscript><link rel="stylesheet" href="{% static 'page/css/noscript.css' %}" /></noscript>
-    
+	<noscript><link rel="stylesheet" href="{% static 'page/css/noscript.css' %}" /></noscript>
 </head>
 
 {% block content%}
@@ -53,13 +52,13 @@
 						<div class="col-6 col-12-medium">
 							<ul class="major-icons">
 								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
-								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
-								<li><span class="icon solid style4 major fa-cog"></span></li>
-								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>
+								<li><span class="icon solid style2 major fab fa-book"></span></li>
+								<li><span class="icon solid style3 major fas fa-js"></span></li>
+								<li><span class="icon solid style4 major fab fa-python"></span></li>
+								<li><span class="icon solid style5 major fas fa-aws"></span></li>
+								<li><span class="icon solid style6 major fab fa-html5"></span></li>
 								<li><span class="icon solid style6 major fas fa-code-branch"></span></li>
-								<li><i class="fab fa-git-alt"></i></li>
+								<li><i class="icon solid major fab fa-git-alt"></i></li>
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium">
