fixed introducing curriculum section in "home.html"

--- a/page/templates/home.html
+++ b/page/templates/home.html
@@ -74,8 +74,12 @@
 							<header class="major">
 								<h2>커리큘럼</h2>
 							</header>
-							<p>커리큘럼 소개</p>
-							<p>커리큘럼</p>
+							<p>멋쟁이사자처럼에서는 웹 서비스 런칭을 목표로 프로그래밍 및 창업 교육을 함께 진행합니다. 컴퓨터 비전공자도 쉽게 접근할 수 있는 Python을 중심으로 프로그래밍을 배우며, Django를 활용한 웹 페이지 개발을 진행하고 있습니다.
+								<li>Front-End : HTML5, CSS3, BootStrap, JavaScript(예정)</li>
+								<li>Back-End : Django</li>
+								<li>Programming Language : Python</li>
+							</p>
+							<p>또한, 서비스 기획을 위해 팀별로 아이디어를 구체화시키고 Adobe XD를 활용하여 UI/UX를 설계하는 방법을 배우게 됩니다. 다른 대학교와 함께 교류하며 아이디어 공유를 위한 연합 세션을 진행하고 있습니다. </p>
 							<p>커리큘럼</p>
 						</div>
 					</div>
