--- a/page/static/page/css/home.css
+++ b/page/static/page/css/home.css
@@ -2826,7 +2826,7 @@ input, select, textarea {
 			background-color: #333;
 			color: rgba(255, 255, 255, 0.75);
 			background-attachment: fixed,							fixed;
-			background-image: url("images/overlay1.png"), url("../images/main/curriculum.JPG");
+			background-image: url("images/overlay1.png"), url("../images/main/curriculum.png");
 			background-size: auto,							cover;
 		}
 
